--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,4 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+body {
+    background: rgb(131,58,180);
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(29,253,103,0.4573179613642332) 48%, rgba(252,176,69,1) 100%);
+}
